k8s-templates/basic/service.yaml
---
# ClusterIP Service (internal communication)
apiVersion: v1
kind: Service
metadata:
  name: app-service
  labels:
    app: app-name
  annotations:
    description: "Internal service for app-name"
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: app-name
---
# NodePort Service (external access without Ingress)
apiVersion: v1
kind: Service
metadata:
  name: app-service-external
  labels:
    app: app-name
  annotations:
    description: "External NodePort service for app-name"
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8080
    nodePort: 30080
    protocol: TCP
    name: http
  selector:
    app: app-name
